2001-03-30  Andy Hertzfeld  <andy@eazel.com>


	* libnautilus-extensions/nautilus-annotation.c:
	(save_local_annotations), (nautilus_annotation_add_annotation):
	more work toward adding and saving annotations
	
2001-03-29  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-annotation.c:
	(nautilus_annotation_add_annotation):
	* libnautilus-extensions/nautilus-annotation.h:
	partially implemented add_annotation
	
2001-03-28  Andy Hertzfeld  <andy@eazel.com>

	made the annotation edit field display existing annotation text,
	if any.  Moved some routines around to help implement this
	
	* libnautilus-extensions/nautilus-annotation.c:
	(nautilus_annotation_get_display_text),
	(nautilus_annotation_get_annotation_for_display):
	* libnautilus-extensions/nautilus-annotation.h:
	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(nautilus_canvas_note_item_set_note_text),
	(nautilus_canvas_note_item_render),
	(nautilus_canvas_note_item_draw):
	* src/file-manager/fm-annotation-window.c:
	(create_annotation_window):

2001-03-28  Andy Hertzfeld  <andy@eazel.com>

	* libnautilus-extensions/nautilus-canvas-note-item.c:
	(draw_item_aa_text):
	adjusted aa text position
	
	* src/file-manager/fm-annotation-window.c:
	(get_pixbuf_for_annotation_window), (annotation_clicked_callback),
	(create_annotation_window):
	added a callback to respond to dialog button clicks
	
2001-03-28  Andy Hertzfeld  <andy@eazel.com>

	* src/file-manager/fm-annotation-window.c:
	(create_annotation_window):
	* src/file-manager/fm-annotation-window.h:
	changed it to be a subclass of gnome_dialog, and added buttons
	
2001-03-27  Andy Hertzfeld  <andy@eazel.com>


	* components/notes/nautilus-notes.c: (make_notes_view):
	made it use the prefered font instead of hardwired helvetica
	
	* src/file-manager/fm-annotation-window.c: (create_options_table),
	(create_annotation_window):
	added widgets to the annotation window
	
2001-03-27  Andy Hertzfeld  <andy@eazel.com>
