@@ -1,3 +1,11 @@
+2001-03-31  Andy Hertzfeld  <`andy@eazel.com>
+
+	* libnautilus-extensions/nautilus-annotation.c:
+	(save_local_annotations), (nautilus_annotation_add_annotation):
+	* src/file-manager/fm-annotation-window.c:
+	(annotation_clicked_callback):
+	completed initial implmentation of creating and editing local annotations.
+	
 2001-03-30  Andy Hertzfeld  <andy@eazel.com>
 
 
